2006-08-08  Atsushi Enomoto  <atsushi@ximian.com>

	* ReadOnlyCollection.cs : added get_IList<T>.this(int).

2006-03-28  Atsushi Enomoto  <atsushi@ximian.com>

	* Collection.cs : Count and Item are not virtual.

2006-01-24  Raja R Harinath  <rharinath@novell.com>

	* ReadOnlyCollection.cs (Items): Return underlying list.

2005-12-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Collection.cs: IsReadOnly property isn't public in 2.0 final.
	* ReadOnlyCollection.cs: Fixed API to match 2.0 final.

2005-10-27  Atsushi Enomoto  <atsushi@ximian.com>

	* Collection.cs : added Items.

2005-10-25  Carlo Kok  <ck@carlo-kok.com>

	* Collection.cs :
	  Added virtual ClearItems, InsertItem, RemoveItem, SetITem.
	* KeyedCollection.cs : Implemented.

2005-06-19  David Waite  <mass@akuma.org>

        * Collection.cs ReadonlyCollection.cs: Implement all methods

2005-06-19  Zoltan Varga  <vargaz@freemail.hu>

	* Collection.cs KeyedCollection.cs ReadOnlyCollection.cs: New files.
